State source location in README.rdoc

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,5 +1,6 @@
 = turntables
 
+* {Source}[http://github.com/psyomn/turntables]
 * {Homepage}[https://rubygems.org/gems/turntables]
 * {Documentation}[http://rubydoc.info/gems/turntables/frames]
 
