Add nice, useless stuff.

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,4 @@
-= turntables
+= turntables {<img src="https://codeclimate.com/github/psyomn/turntables.png" />}[https://codeclimate.com/github/psyomn/turntables]
 
 * {Source}[http://github.com/psyomn/turntables]
 * {Homepage}[https://rubygems.org/gems/turntables]
